--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           context: .
           push: True
-          tags: isitwichtelzeit:$(date +%s),isitwichtelzeit:latest
+          tags: isitwichtelzeit:latest
