--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Webhook for autodeploy
       uses: distributhor/workflow-webhook@v2
       with:
-        url: ${{ secrets.DEPLOY_WEBHOOK }}
+        webhook_url: ${{ secrets.DEPLOY_WEBHOOK }}
